--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  height: 100%;
+  margin: 0;
+}
+
 @layer base {
   h1 {
     @apply text-2xl
